# regular_precession

./: .buildinfo  .gitignore  LICENSE  MC_skyloc_binorient_plus_prec.py  README.html  README.md  api.html  example.py  genindex.html  index.html  installation.html  mismatch_n_SNR.py  objects.inv  py-modindex.html  pyproject.toml  rebuild_docs.sh  regular_precession.py  requirements.txt  search.html  searchindex.js  showyourwork.yml  systems_lib.py  usage.html
.doctrees/: README.doctree  api.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.github/workflows/: docs.yml  gh-pages.yml
_modules/: index.html  regular_precession.html
docs/: .buildinfo  README.html  README.md  api.html  conf.py  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  theme_alternatives.py  usage.html  usage.rst
docs/.doctrees/: README.doctree  api.doctree  index.doctree  installation.doctree  usage.doctree
docs/_modules/: index.html  mismatch_n_SNR.html  regular_precession.html
docs/_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
notebooks/: Amplitude.ipynb  Edge_on_systems.ipynb  Modulation_L.ipynb  Phase-phi_p_and_delta_phi.ipynb  Validations_PN_approx.ipynb  optimized_mismatch_contours_skylocs_binorient.ipynb  optimized_mismatch_envelope_sys2.ipynb  optimized_mismatch_panels_all_systems.ipynb  table_2_distinguished_frac_MC_skyloc_n_binorient_fixed_prec.ipynb  table_3_distinguished_frac_MC_skyloc_n_binorient_MC_prec.ipynb
notebooks/saved_data/: convergence_r_data_q0105.pkl
notebooks/saved_data/TACC_runs/: readme.md
src/: MC_skyloc_binorient_plus_prec.py  mismatch_n_SNR.py  regular_precession.py  systems_lib.py
(+23 files in other folders)
