[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regular_precession"
version = "0.1.0"
authors = [
    { name="Tamanjyot Singh" }
]
description = "Regular precession waveform model"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
