[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regular_precession"
version = "0.1.0"
authors = [
    { name="Tamanjyot Singh" }
]
description = "Regular precession waveform model for gravitational wave analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "lalsuite>=7.0.0",
    "pycbc>=2.0.0"
]
keywords = ["gravitational waves", "precession", "waveforms", "LIGO", "black holes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/singhtaman/regular_precession"
"Bug Tracker" = "https://github.com/singhtaman/regular_precession/issues"
"Documentation" = "https://github.com/singhtaman/regular_precession/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]
